styled single trip page

--- a/views/trip/editTrip.hbs
+++ b/views/trip/editTrip.hbs
@@ -1,38 +1,135 @@
 <div class="header">Edit Trip</div>
 
-<form action="/trip/{{singleTrip._id}}?_method=PUT" method="POST">
+<div class="create-trip-form">
+    <form class="needs-validation" novalidate action="/trip/{{singleTrip._id}}?_method=PUT" method="POST">
+        <div class="form-row">
+            <div class="col-md-4 mb-3">
+                <label for="validationCustom01">Trip Name</label>
+                <input type="text" class="form-control" id="validationCustom01" value="{{singleTrip.name}}" name="name"
+                    required>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+                <div class="invalid-feedback">
+                    Please name your trip.
+                </div>
+            </div>
+            <div class="col-md-4 mb-3">
+                <label for="validationCustom02">Country</label>
+                <select class="form-control" id="validationCustom02" name="country" required>
+                    <option value="Canada">Canada</option>
+                    <option value="United States of America">United States of America</option>
+                </select>
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="col-md-3 mb-3">
+                <label for="validationCustom03">City</label>
+                <input type="text" class="form-control" id="validationCustom03" value="{{singleTrip.city}}" name="city"
+                    required>
+                <div class="invalid-feedback">
+                    Please provide a valid city.
+                </div>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+            <div class="col-md-3 mb-3">
+                <label for="validationCustomUsername">State</label>
+                <div class="input-group">
+                    <input type="text" class="form-control" id="validationCustomUsername" value="{{singleTrip.state}}"
+                        name="state" required>
+                    <div class="invalid-feedback">
+                        Please provide a valid State.
+                    </div>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-2 mb-3">
+                <label for="validationCustom03">Airpot</label>
+                <input type="text" class="form-control" id="validationCustom03" value="{{singleTrip.airport}}"
+                    name="airport" required>
+                <div class="invalid-feedback">
+                    Please provide a valid airport.
+                </div>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="col-md-3 mb-3">
+                <label for="validationCustom03">Start Date</label>
+                <input type="date" class="form-control" id="validationCustom03" value="{{singleTrip.startDate}}"
+                    name="startDate" required>
+                <div class="invalid-feedback">
+                    Please select a start date.
+                </div>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+            <div class="col-md-3 mb-3">
+                <label for="validationCustom03">End Date</label>
+                <input type="date" class="form-control" id="validationCustom03" value="{{singleTrip.endDate}}"
+                    name="endDate" required>
+                <div class="invalid-feedback">
+                    Please select an end date.
+                </div>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+            <div class="col-md-2 mb-3">
+                <label for="validationCustom03">Days on the Slopes</label>
+                <input type="number" class="form-control" id="validationCustom03" value="{{singleTrip.daysSkiing}}"
+                    name="daysSkiing" required>
+                <div class="invalid-feedback">
+                    Please provide how many days you are planning on skiing.
+                </div>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="col-md-8 mb-3">
+                <label for="exampleFormControlTextarea1">Notes</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" value="{{singleTrip.notes}}"
+                    name="notes"></textarea>
+            </div>
+        </div>
 
 
-    <label>Name</label>
-    <input type="text" name="name" value="{{singleTrip.name}}" />
+        <input type="hidden" value="{{singleUser._id}}" name="userId" />
 
-    <label>Country</label>
-    <select name="country" value="{{singleTrip.country}}">
-        <option value="Canada">Canada</option>
-        <option value="United States of America">United States of America</option>
-    </select>
+        <div class="form-row">
+            <div class="col-md-4 mb-3">
+                <input type="submit" value="Save" class="btn btn-info btn-lg btn-block" />
+            </div>
+        </div>
+    </form>
+</div>
 
-    <label>State</label>
-    <input type="text" name="state" value="{{singleTrip.state}}" />
-
-    <label>City</label>
-    <input type="text" name="city" value="{{singleTrip.city}}" />
-
-    <label>Airport</label>
-    <input type="text" name="airport" value="{{singleTrip.airport}}" />
-
-    <label>Start Date</label>
-    <input type="date" name="startDate" value="{{singleTrip.startDate}}" />
-
-    <label>End Date</label>
-    <input type="date" name="endDate" value="{{singleTrip.endDate}}" />
-
-    <label>Days Skiing</label>
-    <input type="number" name="daysSkiing" value="{{singleTrip.daysSkiing}}" />
-
-
-    <label>Notes</label>
-    <input type="textarea" name="notes" value="{{singleTrip.notes}}">
-
-    <input type="submit" value="Save" />
-</form>
+<script>
+    // Example starter JavaScript for disabling form submissions if there are invalid fields
+    (function () {
+        'use strict';
+        window.addEventListener('load', function () {
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            var forms = document.getElementsByClassName('needs-validation');
+            // Loop over them and prevent submission
+            var validation = Array.prototype.filter.call(forms, function (form) {
+                form.addEventListener('submit', function (event) {
+                    if (form.checkValidity() === false) {
+                        event.preventDefault();
+                        event.stopPropagation();
+                    }
+                    form.classList.add('was-validated');
+                }, false);
+            });
+        }, false);
+    })();
+</script>
