refactored create trips page

--- a/views/trip/createTrip.hbs
+++ b/views/trip/createTrip.hbs
@@ -5,8 +5,7 @@
         <div class="form-row">
             <div class="col-md-4 mb-3">
                 <label for="validationCustom01">Trip Name</label>
-                <input type="text" class="form-control" id="validationCustom01" placeholder="Trip Name" name="name"
-                    required>
+                <input type="text" class="form-control" placeholder="Trip Name" name="name" required>
                 <div class="valid-feedback">
                     Looks good!
                 </div>
@@ -16,7 +15,7 @@
             </div>
             <div class="col-md-4 mb-3">
                 <label for="validationCustom02">Country</label>
-                <select class="form-control" id="validationCustom02" name="country" required>
+                <select class="form-control" name="country" required>
                     <option value="Canada">Canada</option>
                     <option value="United States of America">United States of America</option>
                 </select>
@@ -25,7 +24,7 @@
         <div class="form-row">
             <div class="col-md-3 mb-3">
                 <label for="validationCustom03">City</label>
-                <input type="text" class="form-control" id="validationCustom03" name="city" required>
+                <input type="text" class="form-control" name="city" required>
                 <div class="invalid-feedback">
                     Please provide a valid city.
                 </div>
@@ -36,7 +35,7 @@
             <div class="col-md-3 mb-3">
                 <label for="validationCustomUsername">State</label>
                 <div class="input-group">
-                    <input type="text" class="form-control" id="validationCustomUsername" name="state" required>
+                    <input type="text" class="form-control" name="state" required>
                     <div class="invalid-feedback">
                         Please provide a valid State.
                     </div>
@@ -47,7 +46,7 @@
             </div>
             <div class="col-md-2 mb-3">
                 <label for="validationCustom03">Airpot</label>
-                <input type="text" class="form-control" id="validationCustom03" name="airport" required>
+                <input type="text" class="form-control" name="airport" required>
                 <div class="invalid-feedback">
                     Please provide a valid airport.
                 </div>
@@ -59,7 +58,7 @@
         <div class="form-row">
             <div class="col-md-3 mb-3">
                 <label for="validationCustom03">Start Date</label>
-                <input type="date" class="form-control" id="validationCustom03" name="startDate" required>
+                <input type="date" class="form-control" name="startDate" required>
                 <div class="invalid-feedback">
                     Please select a start date.
                 </div>
@@ -69,7 +68,7 @@
             </div>
             <div class="col-md-3 mb-3">
                 <label for="validationCustom03">End Date</label>
-                <input type="date" class="form-control" id="validationCustom03" name="endDate" required>
+                <input type="date" class="form-control" name="endDate" required>
                 <div class="invalid-feedback">
                     Please select an end date.
                 </div>
@@ -79,7 +78,7 @@
             </div>
             <div class="col-md-2 mb-3">
                 <label for="validationCustom03">Days on the Slopes</label>
-                <input type="number" class="form-control" id="validationCustom03" name="daysSkiing" required>
+                <input type="number" class="form-control" name="daysSkiing" required>
                 <div class="invalid-feedback">
                     Please provide how many days you are planning on skiing.
                 </div>
@@ -91,7 +90,7 @@
         <div class="form-row">
             <div class="col-md-8 mb-3">
                 <label for="exampleFormControlTextarea1">Notes</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="notes"></textarea>
+                <textarea class="form-control" rows="3" name="notes"></textarea>
             </div>
         </div>
 
