styled edit resort form

--- a/views/resort/editResort.hbs
+++ b/views/resort/editResort.hbs
@@ -1,44 +1,171 @@
 <div class="header">Edit Resort</div>
 
-<form action="/resort/{{singleResort._id}}?_method=PUT" method="POST">
 
+<div class="create-resort-wrapper">
+    <form class="needs-validation" novalidate action="/resort/{{singleResort._id}}?_method=PUT" method="POST">
 
-    <label>Name</label>
-    <input type="text" name="name" value="{{singleResort.name}}" />
+        <div class="form-group row">
+            <label>Name</label>
+            <div class="col-sm-5">
+                <input type="text" class="form-control" name="name" value="{{singleResort.name}}" required>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+                <div class="invalid-feedback">
+                    Please enter the resort's name.
+                </div>
+            </div>
+        </div>
 
-    <label>Average Annual Snowfall (in.)</label>
-    <input type="number" name="averageAnnualSnowfall" value="{{singleResort.averageAnnualSnowfall}}" />
+        <div class="form-group row">
+            <label>Average Annual Snowfall (in.)</label>
+            <div class="col-sm-5">
+                <input type="number" class="form-control" name="averageAnnualSnowfall"
+                    value="{{singleResort.averageAnnualSnowfall}}" required>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+                <div class="invalid-feedback">
+                    Please enter the average annual snowfall.
+                </div>
+            </div>
+        </div>
 
-    <label>YTD Snowfall (in.)</label>
-    <input type="number" name="yearToDateSnowfall" value="{{singleResort.yearToDateSnowfall}}" />
+        <div class="form-group row">
+            <label>YTD Snowfall (in.)</label>
+            <div class="col-sm-5">
+                <input type="number" class="form-control" name="yearToDateSnowfall"
+                    value="{{singleResort.yearToDateSnowfall}}" required>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+                <div class="invalid-feedback">
+                    Please enter the year to date (YTD) snowfall.
+                </div>
+            </div>
+        </div>
 
-    <label>Current Base (in.)</label>
-    <input type="number" name="currentBase" value="{{singleResort.currentBase}}" />
+        <div class="form-group row">
+            <label>Current Base (in.)</label>
+            <div class="col-sm-5">
+                <input type="number" class="form-control" name="currentBase" value="{{singleResort.currentBase}}"
+                    required>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+                <div class="invalid-feedback">
+                    Please enter the current base.
+                </div>
+            </div>
+        </div>
 
-    <label>Vertical Feet (ft.)</label>
-    <input type="number" name="verticalFeet" value="{{singleResort.verticalFeet}}" />
+        <div class="form-group row">
+            <label>Vertical Feet (ft.)</label>
+            <div class="col-sm-5">
+                <input type="number" class="form-control" name="verticalFeet" value="{{singleResort.verticalFeet}}"
+                    required>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+                <div class="invalid-feedback">
+                    Please enter the vertical feet.
+                </div>
+            </div>
+        </div>
 
-    <label>Number of Trails</label>
-    <input type="number" name="amountOfTrails" value="{{singleResort.amountOfTrails}}" />
+        <div class="form-group row">
+            <label>Number of Trails</label>
+            <div class="col-sm-5">
+                <input type="number" class="form-control" name="amountOfTrails" value="{{singleResort.amountOfTrails}}"
+                    required>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+                <div class="invalid-feedback">
+                    Please enter the number of trails on the mountain.
+                </div>
+            </div>
+        </div>
 
-    <label>Number of Lifts</label>
-    <input type="number" name="amountofLifts" value="{{singleResort.amountofLifts}}" />
+        <div class="form-group row">
+            <label>Number of Lifts</label>
+            <div class="col-sm-5">
+                <input type="number" class="form-control" name="amountofLifts" value="{{singleResort.amountofLifts}}"
+                    required>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+                <div class="invalid-feedback">
+                    Please enter the number of lifts on the mountain.
+                </div>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label>Is this resort on the Ikon Pass?</label>
+            <div class="col-sm-5">
+                <select class="form-control" name="onIkonPass" value="{{singleResort.onIkonPass}}" required>
+                    <option value="" disabled selected hidden>Select an option</option>
+                    <option value="true">Yes</option>
+                    <option value="false">No</option>
+                </select>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+                <div class="invalid-feedback">
+                    Please select an option.
+                </div>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label>Is this resort on the Epic Pass?</label>
+            <div class="col-sm-5">
+                <select class="form-control" name="onEpicPass" value="{{singleResort.onEpicPass}}" required>
+                    <option value="" disabled selected hidden>Select an option</option>
+                    <option value="true">Yes</option>
+                    <option value="false">No</option>
+                </select>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+                <div class="invalid-feedback">
+                    Please select an option.
+                </div>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label>Notes</label>
+            <div class="col-md-8 mb-3">
+                <textarea type="textarea" class="form-control" name="notes" value="{{singleResort.notes}}"></textarea>
+            </div>
+        </div>
 
-    <label>Is this resort on the Ikon Pass?</label>
-    <select name="onIkonPass" value="{{singleResort.onIkonPass}}">
-        <option value="true">Yes</option>
-        <option value="false">No</option>
-    </select>
+        <div class="form-row">
+            <div class="col-md-4 mb-3">
+                <input type="submit" value="Save" class="btn btn-info btn-lg btn-block" />
+            </div>
+        </div>
 
-    <label>Is this resort on the Epic Pass?</label>
-    <select name="onEpicPass" value="{{singleResort.onEpicPass}}">
-        <option value="true">Yes</option>
-        <option value="false">No</option>
-    </select>
+        <input type="hidden" value="{{singleTrip._id}}" name="tripId" />
+    </form>
+</div>
 
-
-    <label>Notes</label>
-    <input type="textarea" name="notes" value="{{singleResort.notes}}">
-
-    <input type="submit" value="Save" />
-</form>
+<script>
+    // Example starter JavaScript for disabling form submissions if there are invalid fields
+    (function () {
+        'use strict';
+        window.addEventListener('load', function () {
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            var forms = document.getElementsByClassName('needs-validation');
+            // Loop over them and prevent submission
+            var validation = Array.prototype.filter.call(forms, function (form) {
+                form.addEventListener('submit', function (event) {
+                    if (form.checkValidity() === false) {
+                        event.preventDefault();
+                        event.stopPropagation();
+                    }
+                    form.classList.add('was-validated');
+                }, false);
+            });
+        }, false);
+    })();
+</script>
